--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-dropdown": "^1.6.4",
     "react-scripts": "2.1.3"
   },
   "scripts": {
